# ToySim

./: .gitignore  CMakeLists.txt  README.md  asm.rb  constants.rb  fib.rb  file.ansi  file.txt  get_ready.sh  grr  run_benchmarks.sh  test.rb  toy_isa.rb
benchmarks/: bench1.rb  bench2.rb  bench3.rb  bench4.rb  bench5.rb  bench6.rb  bench7.rb  bench8.rb  build_plot.py
benchmarks/perf/: bench1.data  bench2.data  bench3.data  bench4.data  bench5.data  bench6.data  bench7.data
include/: commands.hpp  commands_jit.hpp  errors.hpp  helper.hpp  interpreter.hpp
jit/: CMakeLists.txt  main.c
src/: commands.cpp  commands.hpp  commands_jit.cpp  errors.hpp  helper.cpp  interpreter.cpp  jit.cpp
tests/: fib.rb  test.rb
